--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsLayout/LvsAdmin-layout.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsLayout/LvsAdmin-layout.html
@@ -216,6 +216,9 @@
     </div>
 
     <footer th:replace="~{LvsAreas/LvsAdmin/LvsFragments/LvsFooter :: footer}"></footer>
+
+    <!-- Bootstrap 5 JS Bundle (includes Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
